CHANGES IN FLTK 1.1.0

	- Fl_BMP_Image now supports older BMP files with the 12
	  byte header.
	- Optimized the redrawing of tabs and radio/check
	  buttons when the keyboard focus changes.
	- More tooltip fixes.
	- DND text operations would loop under X11.


CHANGES IN FLTK 1.1.0rc2

	- Portability fixes.
	- Backported 2.0 tooltip changes.
	- Several of the valuators did not support tooltips.
	- The last menu item in a menu didn't pick up on font
	  changes.
	- FLUID now properly handles default argument parameters
	  properly.
	- Fixed WM_PAINT handling under WIN32 - didn't validate
	  the correct region that was drawn.
	- Fl_Multiline_Output would insert the enter key.
	- Fl_File_Browser didn't clip items to the column width.
	- Fl_Window::draw() cleared the window label but didn't
	  restore it, so windows could lose their titles.
	- Eliminated multiple definitions of dirent structure
	  when compiling under WIN32.
	- Adjusted the size of the circle that is drawn inside
	  radio buttons to scale better for larger labels.
	- FLUID was opening the display when it shouldn't have.
	- Fl_File_Chooser.cxx defined the file chooser functions
	  again; they should only be defined in the header file.
	- Wide arcs would draw with "teeth".
	- The preferences demo included Fl/Fl_Preferences.H
	  instead of FL/Fl_Preferences.H.


CHANGES IN FLTK 1.1.0rc1

	- The fl_file_chooser() and fl_dir_chooser() functions
	  now support an optional "relative" argument to get
	  relative pathnames; the default is to return absolute
	  pathnames.
	- The backspace and delete keys now work as expected in
	  the file chooser when doing filename completion.
	- FLUID now supports running shell commands.
	- New Fl_File_Input widget that shows directory
	  separators with filename in input field.
	- The Fl_File_Chooser dialog now shows the absolute path
	  in the filename field using the Fl_File_Input widget.
	- FLUID now keeps track of grid, tooltip, and other